2008-07-02  Andreas Kupries  <andreask@activestate.com>

	* queue.tcl: Changed core queue code to support multiple
	* queue_tcl.tcl: implementations, and Tcl implementation. Bumped
	* queue.man: to version 1.4.1. Updated documentation to mention
	* pkgIndex.tcl: the critcl implementation, version number,
	  etc. Reworked the Tcl implementation as well for speed (split
	  buffer, indexing, avoid memcopies, K-operator).

	* queue_c.tcl: Critcl based implementation of queues.
	* queue/ds.h:
	* queue/m.c:
	* queue/m.h:
	* queue/q.c:
	* queue/q.h:

	* queue.testsuite: Reworked the testsuite to handle both Tcl and
	* queue.test:      critcl implementations.

2008-06-19  Andreas Kupries  <andreask@activestate.com>

	* stack.tcl: Changed core stack code to support multiple
	* stack_tcl.tcl: implementations, and Tcl implementation. Bumped
	* stack.man: to version 1.3.3. Updated documentation to mention
	* pkgIndex.tcl: the critcl implementation, version number, etc.

	* stack_c.tcl: Critcl based implementation of stacks.
	* stack/ds.h:
	* stack/m.c:
	* stack/m.h:
	* stack/s.c:
	* stack/s.h:

	* stack.testsuite: Reworked the testsuite to handle both Tcl and
	* stack.test:      critcl implementations.

2008-06-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* stack.bench: New file, added benchmarks for stack objects.
	* stack.tcl: Rewrites of various commands for speed, using K
	* pkgIndex.tcl: operator etc. Bumped to version 1.3.2.
	* stack.man:

2008-03-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/tests/nodes.test: Extended with tests to capture the
	  situation of [Bug 1923685]. They properly crash without the fix
	  and pass when the fix is applied.

	* graph/util.h (ASSERT): Extended to reported the asserted expression,
	  and the file and line the assert is at.

	* graph/filter.c (filter_mode_n_in, filter_mode_n_out): Fixed bug
	  in checking for duplicate nodes. Allowed dups to remain, causing