@@ -17,12 +17,14 @@
  */
 
 #undef  STACK_DEBUG
-/*#define STACK_DEBUG 1*/
+#define STACK_DEBUG 1
 
 #ifdef STACK_DEBUG
+#define XSTR(x) #x
+#define STR(x) XSTR(x)
 #define RANGEOK(i,n) ((0 <= (i)) && (i < (n)))
-#define ASSERT(x,msg) if (!(x)) { Tcl_Panic (msg);}
-#define ASSERT_BOUNDS(i,n) ASSERT (RANGEOK(i,n),"array index out of bounds")
+#define ASSERT(x,msg) if (!(x)) { Tcl_Panic (msg " (" #x "), in file " __FILE__ " @line " STR(__LINE__));}
+#define ASSERT_BOUNDS(i,n) ASSERT (RANGEOK(i,n),"array index out of bounds: " STR(i) " > " STR(n))
 #else
 #define ASSERT(x,msg)
 #define ASSERT_BOUNDS(i,n)
